ci: modificando o build do main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Build (sem testes unitários)
         run: mvn -B package
+        working-directory: ./ms-nutria-postgresql
 
   lint:
     runs-on: ubuntu-latest
