--- a/ms-nutria-postgresql/pom.xml
+++ b/ms-nutria-postgresql/pom.xml
@@ -60,6 +60,10 @@
 			<version>2.8.9</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.32</version>
