--- a/ms-nutria-postgresql/src/main/resources/application.properties
+++ b/ms-nutria-postgresql/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://${DB_SECOND_HOST}:${DB_SECOND_PORT}/${DB
 spring.datasource.username=${DB_SECOND_USER}
 spring.datasource.password=${DB_SECOND_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=never
