--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           cache: maven
 
       - name: Build (sem testes unitários)
-        run: mvn -B package
+        run: mvn -B package -Dmaven.test.skip=true
         working-directory: ./ms-nutria-postgresql
 
   lint:
@@ -32,6 +32,7 @@ jobs:
           cache: maven
       - name: Verificação de formatação e estilo
         run: mvn -B spotless:check checkstyle:check
+        working-directory: ./ms-nutria-postgresql
 
   dependency-scan:
     runs-on: ubuntu-latest
@@ -44,6 +45,7 @@ jobs:
           cache: maven
       - name: OWASP Dependency Check
         run: mvn -B org.owasp:dependency-check-maven:check -DfailBuildOnCVSS=8
+        working-directory: ./ms-nutria-postgresql
 
   docker-smoke:
     runs-on: ubuntu-latest
@@ -51,7 +53,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build imagem Docker
-        run: docker build -t app:pr-${{ github.run_number }} .
+        run: docker build -t app:pr-${{ github.run_number }} ./ms-nutria-postgresql
       - name: Smoke test (health)
         run: |
           cid=$(docker run -d -p 8080:8080 app:pr-${{ github.run_number }})
